--- a/index.html
+++ b/index.html
@@ -302,22 +302,22 @@
         <h2>Our Featured Products</h2>
         <div class="product-grid">
             <div class="product-item">
-                <img src="domain.png" alt="Domain Names">
-                <h3>Domain Names</h3>
-                <p class="price">$9.99/year</p>
-                <button>Buy Now</button>
+                <img src="allkey/netshop.display.minecraftserver.png" alt="Minecraft Server Hosting - Display">
+                <h3>Minecraft Server Hosting</h3>
+                <p class="price">IDR 5.000/Bulan</p>
+                <button>Order</button>
             </div>
             <div class="product-item">
-                <img src="discord.png" alt="Discord Nitro">
-                <h3>Discord Nitro</h3>
-                <p class="price">$4.99/month</p>
-                <button>Buy Now</button>
+                <img src="allkey/netshop.display.domainname.png" alt="Domain - Display">
+                <h3>Domain Name</h3>
+                <p class="price">IDR 7.998/Tahun</p>
+                <button>Order</button>
             </div>
             <div class="product-item">
                 <img src="spotify.png" alt="Spotify Premium">
                 <h3>Spotify Premium</h3>
                 <p class="price">$9.99/month</p>
-                <button>Buy Now</button>
+                <button>Order</button>
             </div>
         </div>
     </section>
