--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="netshop.id">
+            <img src="allkey/netshop.display.iconnav.png" alt="netshop.id">
         </div>
         <div class="hamburger" onclick="toggleMenu()">
             <div></div>
