--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Welcome to netshop.id</h1>
-            <p>Your one-stop digital store for all your needs.</p>
+            <p>Dipercaya sebagai penyedia layanan cloud dan digital sejak 2021</p>
             <button onclick="shopNow()">Shop Now</button>
         </div>
     </section>
@@ -304,19 +304,19 @@
             <div class="product-item">
                 <img src="allkey/netshop.display.minecraftserver.png" alt="Minecraft Server Hosting - Display">
                 <h3>Minecraft Server Hosting</h3>
-                <p class="price">IDR 5.000/Bulan</p>
+                <p class="price">IDR 5.000/month</p>
                 <button>Order</button>
             </div>
             <div class="product-item">
                 <img src="allkey/netshop.display.domainname.png" alt="Domain - Display">
                 <h3>Domain Name</h3>
-                <p class="price">IDR 7.998/Tahun</p>
+                <p class="price">IDR 7.998/year</p>
                 <button>Order</button>
             </div>
             <div class="product-item">
-                <img src="spotify.png" alt="Spotify Premium">
+                <img src="allkey/netshop.display.spotify" alt="Spotify Premium">
                 <h3>Spotify Premium</h3>
-                <p class="price">$9.99/month</p>
+                <p class="price">IDR 9.900/month</p>
                 <button>Order</button>
             </div>
         </div>
