--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 <button>Order</button>
             </div>
             <div class="product-item">
-                <img src="allkey/netshop.display.spotify" alt="Spotify Premium">
+                <img src="allkey/netshop.display.spotify.png" alt="Spotify Premium">
                 <h3>Spotify Premium</h3>
                 <p class="price">IDR 9.900/month</p>
                 <button>Order</button>
