--- a/products/index.html
+++ b/products/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,6 +51,12 @@
             font-size: 16px;
         }
 
+        .loading {
+            text-align: center;
+            margin: 50px 0;
+            display: none;
+        }
+
         .products {
             padding: 50px 20px;
             text-align: center;
@@ -71,6 +78,12 @@
             padding: 20px;
             border-radius: 10px;
             text-align: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .product-item:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
         }
 
         .product-item img {
@@ -99,6 +112,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -118,6 +132,10 @@
         <input type="text" id="searchInput" placeholder="Search for products...">
     </div>
 
+    <div class="loading" id="loading">
+        <p>Loading products...</p>
+    </div>
+
     <section class="products">
         <h2>Our Products</h2>
         <div id="productGrid" class="product-grid">
@@ -131,6 +149,11 @@
 
     <script>
         const products = [];
+        const loadingElement = document.getElementById('loading');
+        const productGrid = document.getElementById('productGrid');
+
+        // Tampilkan indikator loading
+        loadingElement.style.display = 'block';
 
         // Fungsi untuk mengambil data dari stock1.json
         fetch('stock1.json')
@@ -138,11 +161,15 @@
             .then(data => {
                 products.push(...data);
                 displayProducts(products);
+                loadingElement.style.display = 'none'; // Sembunyikan indikator loading setelah produk dimuat
+            })
+            .catch(error => {
+                console.error('Error fetching products:', error);
+                loadingElement.innerText = 'Failed to load products';
             });
 
         // Fungsi untuk menampilkan produk
         function displayProducts(productList) {
-            const productGrid = document.getElementById('productGrid');
             productGrid.innerHTML = '';
 
             productList.forEach(product => {
@@ -160,7 +187,7 @@
         }
 
         // Fungsi untuk mencari produk
-        document.getElementById('searchInput').addEventListener('input', function() {
+        document.getElementById('searchInput').addEventListener('input', function () {
             const searchQuery = this.value.toLowerCase();
             const filteredProducts = products.filter(product =>
                 product.name.toLowerCase().includes(searchQuery)
@@ -169,4 +196,5 @@
         });
     </script>
 </body>
+
 </html>
