--- a/products/index.html
+++ b/products/index.html
@@ -117,7 +117,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="netshop.id">
+            <img src="/allkey/netshop.display/iconnav.png" alt="netshop.id">
         </div>
         <nav>
             <ul>
