--- a/products/index.html
+++ b/products/index.html
@@ -26,59 +26,87 @@
             height: 50px;
         }
 
-        nav {
-            position: relative;
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+            z-index: 1001;
+            justify-content: center;
+            align-items: center;
+            gap: 5px;
+            margin-right: 20px;
+        }
+
+        .hamburger div {
+            width: 30px;
+            height: 3px;
+            background-color: white;
+            transition: 0.4s;
+        }
+
+        .hamburger.active div:nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
+        }
+
+        .hamburger.active div:nth-child(2) {
+            opacity: 0;
+        }
+
+        .hamburger.active div:nth-child(3) {
+            transform: rotate(-45deg) translate(5px, -5px);
         }
 
         nav ul {
             list-style: none;
             display: flex;
             gap: 15px;
-            margin: 0;
-            padding: 0;
-        }
-
-        nav ul li {
-            display: inline;
         }
 
         nav ul li a {
             text-decoration: none;
             color: white;
             font-weight: bold;
+            transition: color 0.3s ease;
         }
 
-        .hamburger {
-            display: none;
-            flex-direction: column;
-            cursor: pointer;
+        nav ul li a:hover {
+            color: #f39c12;
         }
 
-        .hamburger div {
-            width: 25px;
-            height: 3px;
-            background-color: white;
-            margin: 4px 0;
-            transition: 0.4s;
+        nav ul.active {
+            display: block;
         }
 
         @media (max-width: 768px) {
             nav ul {
+                display: none;
                 flex-direction: column;
+                width: 100%;
+                background-color: #333;
                 position: absolute;
                 top: 60px;
-                right: 0;
-                background-color: #333;
-                width: 100%;
-                display: none;
+                left: 0;
+                padding: 20px;
             }
 
-            nav ul.show {
+            nav ul.active {
                 display: flex;
+                animation: slideDown 0.3s ease-out;
             }
 
             .hamburger {
                 display: flex;
+                position: relative;
+                right: 0;
+            }
+
+            @keyframes slideDown {
+                from {
+                    transform: translateY(-100%);
+                }
+                to {
+                    transform: translateY(0);
+                }
             }
         }
 
@@ -163,13 +191,13 @@
         <div class="logo">
             <img src="/allkey/netshop.display.iconnav.png" alt="netshop.id">
         </div>
+        <div class="hamburger" onclick="toggleMenu()">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
         <nav>
-            <div class="hamburger" id="hamburger">
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <ul id="navLinks">
+            <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Products</a></li>
                 <li><a href="#">About</a></li>
@@ -198,6 +226,13 @@
     </footer>
 
     <script>
+        function toggleMenu() {
+            const nav = document.querySelector('nav ul');
+            const hamburger = document.querySelector('.hamburger');
+            nav.classList.toggle('active');
+            hamburger.classList.toggle('active');
+        }
+
         const products = [];
         const loadingElement = document.getElementById('loading');
         const productGrid = document.getElementById('productGrid');
@@ -248,12 +283,6 @@
                 product.name.toLowerCase().includes(searchQuery)
             );
             displayProducts(filteredProducts);
-        });
-
-        // Fungsi untuk toggle menu hamburger
-        document.getElementById('hamburger').addEventListener('click', function () {
-            const navLinks = document.getElementById('navLinks');
-            navLinks.classList.toggle('show');
         });
     </script>
 </body>
