--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         }
 
         function shopNow() {
-            window.location.href = '#products';
+            window.location.href = 'products';
         }
 
         document.addEventListener('DOMContentLoaded', function() {
